src/test/ui/compile-fail-migration/method-macro-backtrace.stderr
error[E0201]: duplicate definitions with name `bar`:
  --> $DIR/method-macro-backtrace.rs:32:5
   |
LL |     fn bar(&self) { }
   |     ----------------- previous definition of `bar` here
LL |     fn bar(&self) { } //~ ERROR duplicate definitions
   |     ^^^^^^^^^^^^^^^^^ duplicate definition

error: aborting due to previous error

For more information about this error, try `rustc --explain E0201`.
